Checkpoint for working with IBData